--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^6.4.0",
     "express": "^4.17.1",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "nunjucks": "^3.2.0"
   }
 }
