--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.139",
     "eslint": "^6.4.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
     "nunjucks": "^3.2.0"
